# ternary-pid

./: AGENT.md  CROSS-POLLINATION.md  Cargo.toml  PLUG_AND_PLAY.md  README.md
docs/: MIGRATION.md
memory/: JOURNAL.md
src/: lib.rs
